# vicarl

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: vicarlConfig.cmake.in  vicarl_options.cmake  vicarl_warnings.cmake
examples/: CMakeLists.txt  ex_ledger_log.c  ex_ledger_sqlite.c  ex_mother_like_integration.c  ex_p2p_loopback.c  ex_p2p_tcp_client.c  ex_p2p_tcp_server.c  ex_read_verify.c  p2p_tcp_common.h
include/vicarl/: crypto.h  error.h  ffi.h  ledger.h  p2p.h  record.h  segment.h  store.h  types.h  version.h  vicarl.h
src/core/: alloc.c  alloc_internal.h  codec.c  codec_internal.h  error.c  error_internal.h  hash.c  hash_internal.h
src/ffi/: ffi.c
src/ledger/: ledger.c
src/model/: merkle.c  merkle_internal.h  record.c  segment.c
src/p2p/: p2p_internal.h  sync.c  wire.c
src/store/: store_common.h  store_log.c  store_sqlite.c
tests/: CMakeLists.txt  test.c  test_codec.c  test_ffi.c  test_ledger.c  test_main.c  test_main_sqlite.c  test_merkle.c  test_p2p_sync.c  test_p2p_wire.c  test_record_segment.c  test_store_log.c  test_store_sqlite.c  test_util.h
